# voicenotes

./: .gitignore  .prettierignore  .prettierrc  .tool-versions  README.md  package.json  pdm.toml  pnpm-lock.yaml  pyproject.toml
.husky/: pre-commit
app/: index.html  package.json  tailwind.config.mjs  tsconfig.json  tsconfig.node.json  ui.config.json  vite.config.ts
app/src/: App.tsx  app.tsx  globals.css  main.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: desktop.json
app/src-tauri/src/: lib.rs  main.rs  scanner.rs  state.rs
app/src/components/: StyleCheck.tsx
app/src/components/dialogs/: context.ts  dialogs.tsx
app/src/components/ui/: button.tsx  callout.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  progress.tsx  resizable.tsx  select.tsx
app/src/lib/: api1.ts  api2.ts  context.ts  utils.ts
tools/: check_author.py
