[package]
name = "voicenotes"
version = "0.0.0"
description = "Quickly search and play voice recordings"
authors = ["o137"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "voicenotes_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
anyhow = "1.0.83"
chrono = "0.4.38"
futures-signals = "0.3.33"
globset = "0.4.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-dialog = "2.0.0-beta.7"
tauri-plugin-process = "2.0.0-beta.4"
tauri-plugin-shell = "2.0.0-beta"
tokio = "1.37.0"
uuid = { version = "1.8.0", features = ["v4"] }
walkdir = "2.5.0"
